feat: support multiple Plex editions of the same media item
