# backend/mediaserver/ej/get_library_section_items.go
@@ -139,7 +139,7 @@ func (e *EJ) GetLibrarySectionItems(ctx context.Context, section models.LibraryS
 		}
 
 		// Check if Media Item exists in DB
-		ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, item.TMDB_ID, item.LibraryTitle)
+		ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, item.TMDB_ID, item.LibraryTitle, item.Edition)
 		if logErr.Message != "" {
 			logAction.AppendWarning("message", "Failed to check if media item exists in database")
 			logAction.AppendWarning("error", Err)
@@ -153,7 +153,7 @@ func (e *EJ) GetLibrarySectionItems(ctx context.Context, section models.LibraryS
 		}
 
 		// Update the Media Item on Server in the DB
-		updateErr := database.UpdateMediaItemOnServer(ctx, item.TMDB_ID, item.LibraryTitle, true)
+		updateErr := database.UpdateMediaItemOnServer(ctx, item.TMDB_ID, item.LibraryTitle, item.Edition, true)
 		if updateErr.Message != "" {
 			logAction.AppendWarning("update_on_server_error", updateErr.Message)
 		}
@@ -296,7 +296,7 @@ func splitCollectionIntoIndividualItems(ctx context.Context, collectionName, par
 		}
 
 		// Check if Media Item exists in DB
-		ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, itemInfo.TMDB_ID, itemInfo.LibraryTitle)
+		ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, itemInfo.TMDB_ID, itemInfo.LibraryTitle, itemInfo.Edition)
 		if logErr.Message != "" {
 			logAction.AppendWarning("message", "Failed to check if media item exists in database")
 			logAction.AppendWarning("error", logErr)
