# backend/mediaserver/ej/get_media_item_details.go
@@ -143,7 +143,7 @@ func (e *EJ) GetMediaItemDetails(ctx context.Context, item *models.MediaItem) (f
 	}
 
 	// Check if Media Item exists in DB
-	ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, item.TMDB_ID, item.LibraryTitle)
+	ignored, ignoredMode, sets, logErr := database.CheckIfMediaItemExists(ctx, item.TMDB_ID, item.LibraryTitle, item.Edition)
 	if logErr.Message != "" {
 		logAction.AppendWarning("message", "Failed to check if media item exists in database")
 		logAction.AppendWarning("error", Err)
@@ -162,7 +162,7 @@ func (e *EJ) GetMediaItemDetails(ctx context.Context, item *models.MediaItem) (f
 	}
 
 	// Update the Media Item on Server in the DB
-	updateErr := database.UpdateMediaItemOnServer(ctx, item.TMDB_ID, item.LibraryTitle, true)
+	updateErr := database.UpdateMediaItemOnServer(ctx, item.TMDB_ID, item.LibraryTitle, item.Edition, true)
 	if updateErr.Message != "" {
 		logAction.AppendWarning("update_on_server_error", updateErr.Message)
 	}
