# backend/routing/mediaserver/get_media_item_details.go
@@ -88,7 +88,7 @@ func GetMediaItemDetails(w http.ResponseWriter, r *http.Request) {
 	// Get the all sets for this TMDB ID
 	switch mediaItem.Type {
 	case "show":
-		showSets, showItems, Err := mediux.GetShowItemSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle)
+		showSets, showItems, Err := mediux.GetShowItemSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle, mediaItem.Edition)
 		if Err.Message != "" {
 			logAction.Status = logging.StatusWarn
 			break
@@ -98,13 +98,13 @@ func GetMediaItemDetails(w http.ResponseWriter, r *http.Request) {
 	case "movie":
 		setItems := map[string]models.IncludedItem{}
 		// For Movies, we get Movie Sets and Movie Collection Sets
-		movieSets, Err := mediux.GetMovieItemSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle, &setItems)
+		movieSets, Err := mediux.GetMovieItemSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle, mediaItem.Edition, &setItems)
 		if Err.Message != "" {
 			logAction.Status = logging.StatusWarn
 			break
 		}
 		response.PosterSets.Sets = movieSets
-		collectionSets, Err := mediux.GetMovieItemCollectionSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle, &setItems)
+		collectionSets, Err := mediux.GetMovieItemCollectionSets(ctx, mediaItem.TMDB_ID, mediaItem.LibraryTitle, mediaItem.Edition, &setItems)
 		if Err.Message != "" {
 			logAction.Status = logging.StatusWarn
 			break
